theme and structure updates